update update with productId v1